--- a/HTML5 - CSS3/index.html
+++ b/HTML5 - CSS3/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Master en CSS: HTML5 - CSS3</title>
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link
+      rel="shortcut icon"
+      href="./assets/images/css3.ico"
+      type="image/x-icon"
+    />
   </head>
   <body></body>
 </html>
