Maquetacion del Header

--- a/HTML5 - CSS3/index.html
+++ b/HTML5 - CSS3/index.html
@@ -12,5 +12,14 @@
       type="image/x-icon"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="center">
+      <header id="header">
+        <div id="logo">
+          <img src="./assets/images/logo-css3.png" alt="Logotipo CSS" />
+        </div>
+        <h1><a href="index.html">MASTER EN CSS</a></h1>
+      </header>
+    </div>
+  </body>
 </html>
