Maquetacion del Sidebar

--- a/HTML5 - CSS3/index.html
+++ b/HTML5 - CSS3/index.html
@@ -14,12 +14,15 @@
   </head>
   <body>
     <div class="center">
+      <!-- INICIO DEL HEADER -->
       <header id="header">
         <div id="logo">
           <img src="./assets/images/logo-css3.png" alt="Logotipo CSS" />
         </div>
         <h1><a href="index.html">MASTER EN CSS</a></h1>
       </header>
+      <!-- FIN DEL HEADER -->
+      <!-- INICIO DE LA BARRA DE NAVEGACION -->
       <nav id="menu">
         <ul>
           <li><a href="#">Inicio</a></li>
@@ -47,6 +50,71 @@
           <li><a href="#">Contacto</a></li>
         </ul>
       </nav>
+      <!-- FIN DE LA BARRA DE NAVEGACION -->
+    </div>
+    <div id="content">
+      <!-- INICIO DEL SIDEBAR -->
+      <aside id="sidebar">
+        <div class="widget">
+          <h3>Entrar a la web</h3>
+          <form action="">
+            <label for="name">Nombre de usuario:</label>
+            <input type="text" />
+
+            <label for="password">Contraseña:</label>
+            <input type="password" />
+
+            <input type="submit" value="Enviar" />
+            <ul>
+              <li><a href="#">Zona de alumnos</a></li>
+              <li><a href="#">Zona del profesor</a></li>
+              <li><a href="#">Acceso a Calificaciones</a></li>
+            </ul>
+          </form>
+        </div>
+        <div class="widget">
+          <h3>Aula Virtual 1</h3>
+          <form action="">
+            <label for="name">Nombre de usuario:</label>
+            <input type="text" />
+
+            <label for="password">Contraseña:</label>
+            <input type="password" />
+
+            <input type="submit" value="Enviar" />
+          </form>
+        </div>
+        <div class="widget">
+          <h3>Aula virtual 2</h3>
+          <form action="">
+            <label for="name">Nombre de usuario:</label>
+            <input type="text" />
+
+            <label for="password">Contraseña:</label>
+            <input type="password" />
+
+            <input type="submit" value="Enviar" />
+          </form>
+        </div>
+        <div class="widget">
+          <h3>Enlaces de interés</h3>
+            <ul>
+              <li><a href="#">Clases Virtuales</a></li>
+              <li><a href="#">Material Didáctico</a></li>
+              <li><a href="#">Horas Sociales</a></li>
+            </ul>
+          </form>
+        </div>
+      </aside>
+
+      <aside id="quote">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Sequi itaque praesentium ipsa ab incidunt soluta!
+        </p>
+        <a href="#">Leer más frases</a>
+      </aside>
+      <!-- FIN DEL SIDEBAR -->
     </div>
   </body>
 </html>
