Maquetacion de las Secciones

--- a/HTML5 - CSS3/index.html
+++ b/HTML5 - CSS3/index.html
@@ -106,7 +106,131 @@
           </form>
         </div>
       </aside>
+      <!-- FIN DEL SIDEBAR -->
+      <!-- INICIO DE LAS SECCIONES -->
+      <div id="sections">
+        <section id="frontend">
+          <span class="stickers">
+            <img src="./assets/images/scotch.png" alt="Pegatina" class="stickerOne">
+            <img src="./assets/images/scotch.png" alt="Pegatina" class="stickerTwo">
+          </span>
+          <h2 class="title">Noticias del Front-end</h2>
+          <article class="article">
+            <span class="icon">a</span>
+            <p>
+              <a href="#">Título de la entrada. </a>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa et earum quidem dolorum? Dicta, iusto accusamus et tempore fugiat ipsam! Distinctio inventore minima facere molestiae.
+            </p>
+            <span class="date">[21-01-2021. Jessé Melara]</span>
+          </article>
+          <article class="article">
+            <span class="icon">a</span>
+            <p>
+              <a href="#">Título de la entrada. </a>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa et earum quidem dolorum? Dicta, iusto accusamus et tempore fugiat ipsam! Distinctio inventore minima facere molestiae.
+            </p>
+            <span class="date">[21-01-2021. Jessé Melara]</span>
+          </article>
+          <article class="article">
+            <span class="icon">a</span>
+            <p>
+              <a href="#">Título de la entrada. </a>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa et earum quidem dolorum? Dicta, iusto accusamus et tempore fugiat ipsam! Distinctio inventore minima facere molestiae.
+            </p>
+            <span class="date">[21-01-2021. Jessé Melara]</span>
+          </article>
+          <article class="article">
+            <span class="icon">a</span>
+            <p>
+              <a href="#">Título de la entrada. </a>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa et earum quidem dolorum? Dicta, iusto accusamus et tempore fugiat ipsam! Distinctio inventore minima facere molestiae.
+            </p>
+            <span class="date">[21-01-2021. Jessé Melara]</span>
+          </article>
+        </section>
 
+        <section id="backend">
+          <span class="stickers">
+            <img src="./assets/images/scotch.png" alt="Pegatina" class="stickerOne">
+            <img src="./assets/images/scotch.png" alt="Pegatina" class="stickerTwo">
+          </span>
+          <h2 class="title">Noticias del Back-end</h2>
+          <article class="article">
+            <span class="icon">a</span>
+            <p>
+              <a href="#">Título de la entrada. </a>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa et earum quidem dolorum? Dicta, iusto accusamus et tempore fugiat ipsam! Distinctio inventore minima facere molestiae.
+            </p>
+            <span class="date">[21-01-2021. Jessé Melara]</span>
+          </article>
+          <article class="article">
+            <span class="icon">a</span>
+            <p>
+              <a href="#">Título de la entrada. </a>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa et earum quidem dolorum? Dicta, iusto accusamus et tempore fugiat ipsam! Distinctio inventore minima facere molestiae.
+            </p>
+            <span class="date">[21-01-2021. Jessé Melara]</span>
+          </article>
+          <article class="article">
+            <span class="icon">a</span>
+            <p>
+              <a href="#">Título de la entrada. </a>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa et earum quidem dolorum? Dicta, iusto accusamus et tempore fugiat ipsam! Distinctio inventore minima facere molestiae.
+            </p>
+            <span class="date">[21-01-2021. Jessé Melara]</span>
+          </article>
+          <article class="article">
+            <span class="icon">a</span>
+            <p>
+              <a href="#">Título de la entrada. </a>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa et earum quidem dolorum? Dicta, iusto accusamus et tempore fugiat ipsam! Distinctio inventore minima facere molestiae.
+            </p>
+            <span class="date">[21-01-2021. Jessé Melara]</span>
+          </article>
+        </section>
+
+        <section id="instructor">
+          <span class="stickers">
+            <img src="./assets/images/scotch.png" alt="Pegatina" class="stickerOne">
+            <img src="./assets/images/scotch.png" alt="Pegatina" class="stickerTwo">
+          </span>
+          <h2 class="title">Noticias del Instructor</h2>
+          <article class="article">
+            <span class="icon">a</span>
+            <p>
+              <a href="#">Título de la entrada. </a>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa et earum quidem dolorum? Dicta, iusto accusamus et tempore fugiat ipsam! Distinctio inventore minima facere molestiae.
+            </p>
+            <span class="date">[21-01-2021. Jessé Melara]</span>
+          </article>
+          <article class="article">
+            <span class="icon">a</span>
+            <p>
+              <a href="#">Título de la entrada. </a>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa et earum quidem dolorum? Dicta, iusto accusamus et tempore fugiat ipsam! Distinctio inventore minima facere molestiae.
+            </p>
+            <span class="date">[21-01-2021. Jessé Melara]</span>
+          </article>
+          <article class="article">
+            <span class="icon">a</span>
+            <p>
+              <a href="#">Título de la entrada. </a>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa et earum quidem dolorum? Dicta, iusto accusamus et tempore fugiat ipsam! Distinctio inventore minima facere molestiae.
+            </p>
+            <span class="date">[21-01-2021. Jessé Melara]</span>
+          </article>
+          <article class="article">
+            <span class="icon">a</span>
+            <p>
+              <a href="#">Título de la entrada. </a>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa et earum quidem dolorum? Dicta, iusto accusamus et tempore fugiat ipsam! Distinctio inventore minima facere molestiae.
+            </p>
+            <span class="date">[21-01-2021. Jessé Melara]</span>
+          </article>
+        </section>
+      </div>
+      <!-- FIN DE LAS SECCIONES -->
+      <!-- INICIO DE LA FRASE -->
       <aside id="quote">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -114,7 +238,7 @@
         </p>
         <a href="#">Leer más frases</a>
       </aside>
-      <!-- FIN DEL SIDEBAR -->
+      <!-- FIN DE LA FRASE -->
     </div>
   </body>
 </html>
