Maquetacion del Footer

--- a/HTML5 - CSS3/index.html
+++ b/HTML5 - CSS3/index.html
@@ -239,6 +239,17 @@
         <a href="#">Leer más frases</a>
       </aside>
       <!-- FIN DE LA FRASE -->
+
+      <div class="clearfix"></div>
+      <div id="history">
+        <a href="#">[Ver histórico de noticias]</a>
+      </div>
     </div>
+    <!-- INICIO DE FOOTER -->
+    <footer id="footer">
+      <p>&copy; Desarrollado por <a href="">JESSE MELARA</a></p>
+      <p>Derechos Reservados 2021</p>
+    </footer>
+    <!-- FIN DE FOOTER -->
   </body>
 </html>
