--- a/HTML5, CSS3 - AVANZADO/index.html
+++ b/HTML5, CSS3 - AVANZADO/index.html
@@ -11,12 +11,14 @@
 </head>
 
 <body>
+    <!-- INICIO DEL HEADER -->
     <header id="header">
         <div class="wrap">
             <div id="logo">
                 <span class="gear">S</span>
                 <h3>BLOG</h3>
             </div>
+            <!-- INICIO DEL NAVBAR -->
             <nav id="menu">
                 <ul>
                     <li><a href="#">INICIO</a></li>
@@ -25,8 +27,19 @@
                     <li><a href="#">CONTACTO</a></li>
                 </ul>
             </nav>
+            <!-- FIN DEL NAVBAR -->
         </div>
     </header>
+    <!-- FIN DEL HEADER -->
+    <!-- INICIO DEL BANNER -->
+    <section class="wrap">
+        <section id="info">
+            <div id="banner">
+                <h1>CURSOS DE DESARROLLO WEB</h1>
+            </div>
+        </section>
+    </section>
+    <!-- FIN DEL BANNER -->
 </body>
 
 </html>
