Maquetacion de las Cards

--- a/HTML5, CSS3 - AVANZADO/index.html
+++ b/HTML5, CSS3 - AVANZADO/index.html
@@ -37,6 +37,51 @@
             <div id="banner">
                 <h1>CURSOS DE DESARROLLO WEB</h1>
             </div>
+            <div id="cards">
+                <div class="card">
+                    <p class="icon">H</p>
+                    <h2 class="category">Desarrollo Web</h2>
+                    <p class="description">
+                        Aprende los conceptos y lenguajes indispensables para el desarrollo
+                        web.
+                        ¡Desde Cero hasta Experto!
+                    </p>
+                </div>
+                <div class="card">
+                    <p class="icon">_</p>
+                    <h2 class="category">Sistemas Operativos</h2>
+                    <p class="description">
+                        Aprende cómo administrar sistemas operativos: MacOS, Windows y
+                        Linux.
+                        ¡Desde Cero hasta Experto!
+                    </p>
+                </div>
+                <div class="card">
+                    <p class="icon">S</p>
+                    <h2 class="category">Hardware</h2>
+                    <p class="description">
+                        Aprende sobre los mecanismos detrás del
+                        hardware.
+                        ¡Desde Cero hasta Experto!
+                    </p>
+                </div>
+                <div class="card">
+                    <p class="icon">u</p>
+                    <h2 class="category">Redes e Internet</h2>
+                    <p class="description">
+                        Aprende a administrar y configurar redes informáticas y servidores.
+                        ¡Desde Cero hasta Experto!
+                    </p>
+                </div>
+                <div class="card">
+                    <p class="icon">a</p>
+                    <h2 class="category">Bases de datos</h2>
+                    <p class="description">
+                        En este curso aprenderás todo lo relacionado a bases de datos.
+                        ¡Desde Cero hasta Experto!
+                    </p>
+                </div>
+            </div>
         </section>
     </section>
     <!-- FIN DEL BANNER -->
