Maquetacion del Sidebar

--- a/HTML5, CSS3 - AVANZADO/index.html
+++ b/HTML5, CSS3 - AVANZADO/index.html
@@ -31,12 +31,14 @@
         </div>
     </header>
     <!-- FIN DEL HEADER -->
-    <!-- INICIO DEL BANNER -->
     <section class="wrap">
         <section id="info">
+            <!-- INICIO DEL BANNER -->
             <div id="banner">
                 <h1>CURSOS DE DESARROLLO WEB</h1>
             </div>
+            <!-- FIN DEL BANNER -->
+            <!-- INICIO DE LAS TARJETAS -->
             <div id="cards">
                 <div class="card">
                     <p class="icon">H</p>
@@ -82,9 +84,52 @@
                     </p>
                 </div>
             </div>
+            <!-- FIN DE LAS TARJETAS -->
+            <!-- INICIO DEL SIDEBAR -->
+            <aside id="sidebar">
+                <h3>BUSCAR</h3>
+                <div id="search">
+                    <form action="">
+                        <input type="text" />
+                        <input type="button" value="L" class="icon">
+                    </form>
+                </div>
+                <h3>LOGIN</h3>
+                <div id="login" class="sidebar-box">
+                    <form action="">
+                        <label for="user" id="user" class="icon">U</label>
+                        <input type="email" name="email" id="email">
+
+                        <label for="password" id="cypher" class="icon">w</label>
+                        <input type="password" name="password" id="password">
+
+                        <input type="submit" value="Entrar">
+                        <input type="reset" value="Limpiar">
+
+                        <a href="#">Regístrate</a>
+                        <a href="#">¿Has olvidado tu contraseña?</a>
+                    </form>
+                </div>
+                <h3>REDES SOCIALES</h3>
+                <div id="social" class="sidebar-box">
+                    <div class="twitter">
+                        <a href="#" class="icon">t</a>
+                    </div>
+                    <div class="facebook">
+                        <a href="#" class="icon">f</a>
+                    </div>
+                    <div class="youtube">
+                        <a href="#" class="icon">y</a>
+                    </div>
+                </div>
+                <h3>COLABORADORES</h3>
+                <div id="sponsors" class="sidebar-box">
+
+                </div>
+            </aside>
+            <!-- FIN DEL SIDEBAR -->
         </section>
     </section>
-    <!-- FIN DEL BANNER -->
 </body>
 
 </html>
