Maquetacion de la seccion de Articulos

--- a/HTML5, CSS3 - AVANZADO/index.html
+++ b/HTML5, CSS3 - AVANZADO/index.html
@@ -128,6 +128,84 @@
                 </div>
             </aside>
             <!-- FIN DEL SIDEBAR -->
+            <!-- INICIO DE ARTICULOS -->
+            <section id="articles">
+                <h2>Últimos Artículos</h2>
+                <article>
+                    <div class="data">
+                        <span>Fecha: 13-ene-2021</span>
+                        <span>Categoría: Pruebas</span>
+                    </div>
+                    <h4>
+                        <a href="#">Título del artículo</a>
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
+                        dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
+                        tempora accusantium.
+                    </p>
+                </article>
+                <article>
+                    <div class="data">
+                        <span>Fecha: 14-feb-2021</span>
+                        <span>Categoría: Pruebas</span>
+                    </div>
+                    <h4>
+                        <a href="#">Título del artículo</a>
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
+                        dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
+                        tempora accusantium.
+                    </p>
+                </article>
+                <article>
+                    <div class="data">
+                        <span>Fecha: 15-mar-2021</span>
+                        <span>Categoría: Pruebas</span>
+                    </div>
+                    <h4>
+                        <a href="#">Título del artículo</a>
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
+                        dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
+                        tempora accusantium.
+                    </p>
+                </article>
+                <article>
+                    <div class="data">
+                        <span>Fecha: 16-abr-2021</span>
+                        <span>Categoría: Pruebas</span>
+                    </div>
+                    <h4>
+                        <a href="#">Título del artículo</a>
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
+                        dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
+                        tempora accusantium.
+                    </p>
+                </article>
+                <article>
+                    <div class="data">
+                        <span>Fecha: 17-may-2021</span>
+                        <span>Categoría: Pruebas</span>
+                    </div>
+                    <h4>
+                        <a href="#">Título del artículo</a>
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
+                        dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
+                        tempora accusantium.
+                    </p>
+                </article>
+                <article id="blog">
+                    <a href="#">Ir al blog</a>
+                </article>
+            </section>
+            <!-- FIN DE ARTICULOS -->
         </section>
     </section>
 </body>
