Maquetacion del Footer

--- a/HTML5, CSS3 - AVANZADO/index.html
+++ b/HTML5, CSS3 - AVANZADO/index.html
@@ -84,130 +84,179 @@
                     </p>
                 </div>
             </div>
-            <!-- FIN DE LAS TARJETAS -->
-            <!-- INICIO DEL SIDEBAR -->
-            <aside id="sidebar">
-                <h3>BUSCAR</h3>
-                <div id="search">
-                    <form action="">
-                        <input type="text" />
-                        <input type="button" value="L" class="icon">
-                    </form>
-                </div>
-                <h3>LOGIN</h3>
-                <div id="login" class="sidebar-box">
-                    <form action="">
-                        <label for="user" id="user" class="icon">U</label>
-                        <input type="email" name="email" id="email">
-
-                        <label for="password" id="cypher" class="icon">w</label>
-                        <input type="password" name="password" id="password">
-
-                        <input type="submit" value="Entrar">
-                        <input type="reset" value="Limpiar">
-
-                        <a href="#">Regístrate</a>
-                        <a href="#">¿Has olvidado tu contraseña?</a>
-                    </form>
-                </div>
-                <h3>REDES SOCIALES</h3>
-                <div id="social" class="sidebar-box">
-                    <div class="twitter">
-                        <a href="#" class="icon">t</a>
-                    </div>
-                    <div class="facebook">
-                        <a href="#" class="icon">f</a>
-                    </div>
-                    <div class="youtube">
-                        <a href="#" class="icon">y</a>
-                    </div>
-                </div>
-                <h3>COLABORADORES</h3>
-                <div id="sponsors" class="sidebar-box">
-
-                </div>
-            </aside>
-            <!-- FIN DEL SIDEBAR -->
-            <!-- INICIO DE ARTICULOS -->
-            <section id="articles">
-                <h2>Últimos Artículos</h2>
-                <article>
-                    <div class="data">
-                        <span>Fecha: 13-ene-2021</span>
-                        <span>Categoría: Pruebas</span>
-                    </div>
-                    <h4>
-                        <a href="#">Título del artículo</a>
-                    </h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
-                        dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
-                        tempora accusantium.
-                    </p>
-                </article>
-                <article>
-                    <div class="data">
-                        <span>Fecha: 14-feb-2021</span>
-                        <span>Categoría: Pruebas</span>
-                    </div>
-                    <h4>
-                        <a href="#">Título del artículo</a>
-                    </h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
-                        dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
-                        tempora accusantium.
-                    </p>
-                </article>
-                <article>
-                    <div class="data">
-                        <span>Fecha: 15-mar-2021</span>
-                        <span>Categoría: Pruebas</span>
-                    </div>
-                    <h4>
-                        <a href="#">Título del artículo</a>
-                    </h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
-                        dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
-                        tempora accusantium.
-                    </p>
-                </article>
-                <article>
-                    <div class="data">
-                        <span>Fecha: 16-abr-2021</span>
-                        <span>Categoría: Pruebas</span>
-                    </div>
-                    <h4>
-                        <a href="#">Título del artículo</a>
-                    </h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
-                        dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
-                        tempora accusantium.
-                    </p>
-                </article>
-                <article>
-                    <div class="data">
-                        <span>Fecha: 17-may-2021</span>
-                        <span>Categoría: Pruebas</span>
-                    </div>
-                    <h4>
-                        <a href="#">Título del artículo</a>
-                    </h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
-                        dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
-                        tempora accusantium.
-                    </p>
-                </article>
-                <article id="blog">
-                    <a href="#">Ir al blog</a>
-                </article>
-            </section>
-            <!-- FIN DE ARTICULOS -->
         </section>
+        <!-- FIN DE LAS TARJETAS -->
+        <!-- INICIO DEL SIDEBAR -->
+        <aside id="sidebar">
+            <h3>BUSCAR</h3>
+            <div id="search">
+                <form action="">
+                    <input type="text" />
+                    <input type="button" value="L" class="icon">
+                </form>
+            </div>
+            <h3>LOGIN</h3>
+            <div id="login" class="sidebar-box">
+                <form action="">
+                    <label for="user" id="user" class="icon">U</label>
+                    <input type="email" name="email" id="email">
+
+                    <label for="password" id="cypher" class="icon">w</label>
+                    <input type="password" name="password" id="password">
+
+                    <input type="submit" value="Entrar">
+                    <input type="reset" value="Limpiar">
+
+                    <a href="#">Regístrate</a>
+                    <a href="#">¿Has olvidado tu contraseña?</a>
+                </form>
+            </div>
+            <h3>REDES SOCIALES</h3>
+            <div id="social" class="sidebar-box">
+                <div class="twitter">
+                    <a href="#" class="icon">t</a>
+                </div>
+                <div class="facebook">
+                    <a href="#" class="icon">f</a>
+                </div>
+                <div class="youtube">
+                    <a href="#" class="icon">y</a>
+                </div>
+            </div>
+            <h3>COLABORADORES</h3>
+            <div id="sponsors" class="sidebar-box">
+
+            </div>
+        </aside>
+        <!-- FIN DEL SIDEBAR -->
+        <!-- INICIO DE ARTICULOS -->
+        <section id="articles">
+            <h2>Últimos Artículos</h2>
+            <article>
+                <div class="data">
+                    <span>Fecha: 13-ene-2021</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Título del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
+                    dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
+                    tempora accusantium.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 14-feb-2021</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Título del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
+                    dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
+                    tempora accusantium.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 15-mar-2021</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Título del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
+                    dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
+                    tempora accusantium.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 16-abr-2021</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Título del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
+                    dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
+                    tempora accusantium.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 17-may-2021</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Título del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit, ut ad vero amet
+                    dicta expedita eligendi nostrum aliquid ullam qui officia nemo nisi sint sed. Eveniet nesciunt
+                    tempora accusantium.
+                </p>
+            </article>
+            <article id="blog">
+                <a href="#">Ir al blog</a>
+            </article>
+        </section>
+        <!-- FIN DE ARTICULOS -->
     </section>
+    <!-- INICIO DEL FOOTER -->
+    <div class="clearfix"></div>
+    <footer id="footer">
+        <div class="wrap">
+            <div id="menu-footer">
+                <h5>MENÚ</h5>
+                <ul>
+                    <li><a href="#">INICIO</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">FORMACION</a></li>
+                    <li><a href="#">CONTACTO</a></li>
+                </ul>
+            </div>
+            <div id="location">
+                <h5>¿DÓNDE ESTAMOS?</h5>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10806.82421732015!2d-89.23091394837971!3d13.696393444350626!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f6331f6bc68ceb7%3A0x1e9928caf45ca503!2zR2FsZXLDrWFzIEVzY2Fsw7Nu!5e0!3m2!1ses-419!2ssv!4v1629243038543!5m2!1ses-419!2ssv"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div id="info">
+                <h5>Desarrollado con</h5>
+                <p>
+                    <img src="./assets/img/html_icon.png" alt="Logo HTML5" title="HTML5" height="35px">
+                </p>
+
+                <h5>Optimizado para</h5>
+                <p id="browsers">
+                    <a href="#">
+                        <img src="./assets/img/chrome.ico" alt="Chrome" title="Chrome">
+                    </a>
+                    <a href="#">
+                        <img src="./assets/img/firefox.ico" alt="Firefox" title="Firefox">
+                    </a>
+                    <a href="#">
+                        <img src="./assets/img/edge.ico" alt="Microsoft Edge" title="Microsoft Edge">
+                    </a>
+                </p>
+
+                <h5>Autor</h5>
+                <p id="author">
+                    <img src="./assets/img/codinghtml.png" alt="Coding">
+                </p>
+                <p id="copyright">
+                    Jessé Melara - &copy; Derechos Reservados 2021
+                </p>
+            </div>
+        </div>
+    </footer>
+    <!-- FIN DEL FOOTER -->
 </body>
 
 </html>
