--- a/HTML5, CSS3 - AVANZADO/index.html
+++ b/HTML5, CSS3 - AVANZADO/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Master en CSS: HTML5 - CSS3</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="shortcut icon" href="./assets/img/gear.ico" type="image/x-icon">
 </head>
 
