--- a/HTML5, CSS3 - FLEXBOX/index.html
+++ b/HTML5, CSS3 - FLEXBOX/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- INICIO DEL CONTAINER -->
     <div id="container">
         <!-- INICIO DEL HEADER -->
         <header id="header">
@@ -27,7 +28,96 @@
             </nav>
         </header>
         <!-- FIN DEL HEADER -->
+        <!-- INICIO DEL CONTENIDO -->
+        <section id="content">
+            <aside id="sidebar">
+                <h2>¿Qué quieres ver?</h2>
+                <ul>
+                    <li><a href="#">Webs</a></li>
+                    <li><a href="#">Apps</a></li>
+                    <li><a href="#">Diseños</a></li>
+                    <li><a href="#">Otros</a></li>
+                </ul>
+            </aside>
+
+            <div id="projects">
+                <article class="project">
+                    <div class="image-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="Imagen de prueba">
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre Proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+                <article class="project">
+                    <div class="image-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="Imagen de prueba">
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre Proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+                <article class="project">
+                    <div class="image-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="Imagen de prueba">
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre Proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+                <article class="project">
+                    <div class="image-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="Imagen de prueba">
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre Proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+                <article class="project">
+                    <div class="image-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="Imagen de prueba">
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre Proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+                <article class="project">
+                    <div class="image-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="Imagen de prueba">
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre Proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+                <article class="project">
+                    <div class="image-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="Imagen de prueba">
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre Proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+                <article class="project">
+                    <div class="image-wrap">
+                        <img src="https://via.placeholder.com/250x180" alt="Imagen de prueba">
+                    </div>
+                    <div class="project-info">
+                        <a href="#">Nombre Proyecto</a>
+                        <p>Sitio Web</p>
+                    </div>
+                </article>
+            </div>
+        </section>
+        <!-- FIN DEL CONTENIDO -->
     </div>
+    <!-- FIN DEL CONTAINER -->
 </body>
 
 </html>
