Maquetacion del Footer

--- a/HTML5, CSS3 - FLEXBOX/index.html
+++ b/HTML5, CSS3 - FLEXBOX/index.html
@@ -14,7 +14,7 @@
     <div id="container">
         <!-- INICIO DEL HEADER -->
         <header id="header">
-            <div id="logo">
+            <div class="logo">
                 <h1>PORTAFOLIO</h1>
             </div>
 
@@ -116,6 +116,17 @@
             </div>
         </section>
         <!-- FIN DEL CONTENIDO -->
+
+        <!-- INICIO DEL FOOTER -->
+        <footer id="footer">
+            <div class="logo">
+                <h1>PORTAFOLIO</h1>
+            </div>
+            <div class="info">
+                &copy; Jessé Melara - Derechos Reservados 2021
+            </div>
+        </footer>
+        <!-- FIN DEL FOOTER -->
     </div>
     <!-- FIN DEL CONTAINER -->
 </body>
