--- a/HTML5, CSS3 - GRID/index.html
+++ b/HTML5, CSS3 - GRID/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maquetación Flexbox</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Maquetación Grid</title>
     <link rel="stylesheet" href="./assets/styles.css">
 </head>
 
