--- a/HTML5, CSS3 - BOOTSTRAP/index.html
+++ b/HTML5, CSS3 - BOOTSTRAP/index.html
@@ -10,6 +10,55 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="row">
+            <header class="col-md-12 mt-2">
+                <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+                    <div class="container-fluid">
+                        <a class="navbar-brand text-uppercase" href="#">Master en CSS - Bootstrap</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-4">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Blog</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Portafolio
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <li><a class="dropdown-item" href="#">Desarrollo Web</a></li>
+                                        <li><a class="dropdown-item" href="#">Desarrollo Móvil</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li><a class="dropdown-item" href="#">Diseños</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">No
+                                        disponible</a>
+                                </li>
+                            </ul>
+                            <form class="d-flex">
+                                <input class="form-control me-2" type="search" placeholder="Búsqueda"
+                                    aria-label="Búsqueda">
+                                <button class="btn btn-outline-success" type="submit">Buscar</button>
+                            </form>
+                        </div>
+                    </div>
+                </nav>
+            </header>
+        </div>
+    </div>
 
     <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
